--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -8,8 +8,9 @@
 <body>
 <div>
     <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
+        <h2 th:text="${msg}"></h2>
     </th:block>
+    <h3><a href="/users">Click if you're ready to get started!</a></h3>
 </div>
 </body>
 </html>
