--- a/src/webapp/WEB-INF/pages/update.html
+++ b/src/webapp/WEB-INF/pages/update.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<form th:method="PATCH"
-      th:action="@{/users/{id}(id=${user.getId()})}"
+<form th:method="POST"
+      th:action="@{updateUser}"
       th:object="${user}">
+    <input type="hidden" th:field="*{id}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</div>
